--- a/public/uniflex-test.html
+++ b/public/uniflex-test.html
@@ -1,7 +1,1 @@
-<!doctype html>
-<html lang="bg"><meta charset="utf-8">
-<title>UniFlex test</title>
-<h1>UniFlex е онлайн ✅</h1>
-<p>Тази страница е от <code>public/uniflex-test.html</code>.</p>
-</html>
-
+<!doctype html><html lang='bg'><meta charset='utf-8'><title>UniFlex test</title><h1>UniFlex е онлайн ✅</h1><p>Тази страница е от <code>public/uniflex-test.html</code>.</p></html>
